<resources>
    <string name="app_name">Fitify</string>
    <plurals name="pro_smallprint_no_trial">
        <item quantity="one"><b>Plan starts today.</b> Only %1$s per month. <b>Cancel anytime.</b></item>
        <item quantity="other"><b>Plan starts today.</b> Only %1$s per %2$d months. <b>Cancel anytime.</b></item>
    </plurals>
    <string name="referral_main_screen_copy_success">Copied</string>
    <string name="notification_engage_title_time">⏰ It’s time to begin!</string>
    <string name="notification_engage_subtitle_shape">You will not get into a dream shape if you don´t work on yourself 🏋️</string>
    <string name="notification_engage_title_remember">Hi, it’s Fitify! Remember? 👋</string>
    <string name="notification_engage_subtitle_first_step">The first step is the hardest, but it\'s also the most rewarding. Tap here to start 👆</string>
    <string name="notification_engage_title_goals">⚠️ Your goals matter ⚠️</string>
    <string name="notification_engage_subtitle_dont_wait">Don\'t wait any longer. Prioritize your health and start your fitness journey now.</string>
    <string name="notification_discount_title_coach">Hi, coach Mike here 👋</string>
    <string name="notification_discount_subtitle_gift">Please, accept my gift of %s%% discount to unlock all Pro features 🎁</string>
    <string name="notification_discount_title_reminder">⚠️ Reminder for %s ⚠️</string>
    <string name="notification_discount_subtitle_users">951,849 users already claimed this limited offer!</string>
    <string name="notification_discount_title_unlock">Unlock limited offer</string>
    <string name="notification_discount_subtitle_expire">👉Reach your goals with a %s%% discount. Offer will expire soon.</string>
    <string name="notification_discount_title_save">Save up to %s%%!</string>
    <string name="notification_discount_subtitle_plan">Get your personal plan + save money! What´s stopping you now?</string>
    <string name="stats_strength_description_weighted">Estimated maximum weight you should be able to lift for a single repetition. The metric is often called e1RM (Estimated One Rep Max).</string>
    <string name="stats_strength_description_reps">Estimated maximum amount of repetitions you should be able to perform with maximum effort in one set.</string>
    <string name="stats_best_set_description">The set for which your calculated strength (e1RM) was the highest</string>
    <string name="continue_terms_agreement">By continuing you agree to %1$s and %2$s</string>
    <string name="sharing_referral_subject">Join me on Fitify!</string>
    <string name="sharing_referral_message">Hey there! Have you tried Fitify yet? It\'s intuitive, fun, and super effective. Dive into a healthier lifestyle with me!
🔗 %s</string>
    <string name="referral_main_screen_title">Invite Friends</string>
    <string name="referral_main_screen_headline">Give your friends a free month of Fitify</string>
    <string name="referral_main_screen_link">Your unique referral link</string>
    <string name="referral_main_screen_copy">Copy</string>
    <string name="referral_main_screen_smallprint">Recipient must be a new Fitify customer</string>
    <string name="referral_main_screen_cta">Send Invitation</string>
    <string name="referral_profile_cta">Invite Friends</string>
    <string name="logout_alert_title">Are you sure you want to log out?</string>
    <string name="label_today">Today</string>
    <plurals name="x_rounds">
        <item quantity="one">%d round</item>
        <item quantity="other">%d rounds</item>
    </plurals>
    <plurals name="x_sets">
        <item quantity="one">%d set</item>
        <item quantity="other">%d sets</item>
    </plurals>
    <string name="stats_max_duration">Max Duration</string>
    <string name="stats_total_duration">Total Duration</string>
    <string name="stats_best_set">Best Set</string>
    <string name="stats_max_weight">Max Weight</string>
    <string name="stats_volume">Volume</string>
    <string name="stats_strength">Strength</string>
    <string name="stats_max_reps">Max Reps</string>
    <string name="stats_total_reps">Total Reps</string>
    <string name="stats_max_distance">Max Distance</string>
    <string name="stats_total_distance">Total Distance</string>
    <string name="breathwork_use_benefits_headache">Headache</string>
    <string name="breathwork_use_benefits_body_aches">Body aches</string>
    <string name="breathwork_use_benefits_hangover">Hangover</string>
    <string name="breathwork_use_benefits_defeat_fear">To defeat fear</string>
    <string name="breathwork_use_benefits_bad_mood">Bad mood</string>
    <string name="breathwork_use_benefits_tense_muscles">Tense muscles</string>
    <string name="breathwork_use_benefits_relax">Relax</string>
    <string name="breathwork_use_benefits_recenter">Recenter</string>
    <string name="breathwork_use_benefits_pain_relief">Pain relief</string>
    <string name="breathwork_use_benefits_evening">Evening</string>
    <string name="breathwork_use_benefits_after_long_day">After a long day</string>
    <string name="breathwork_use_benefits_exhausted">Exhausted</string>
    <string name="breathwork_use_benefits_before_meetings">Before meetings</string>
    <string name="breathwork_use_benefits_feel_good">Feel good</string>
    <string name="breathwork_use_benefits_racing_mind">Racing mind</string>
    <string name="breathwork_use_benefits_calm_down_relax">Calm down and relax</string>
    <string name="breathwork_use_benefits_high_heart_rate">High heart rate</string>
    <string name="breathwork_use_benefits_stressed_anxious">Stressed or anxious</string>
    <string name="breathwork_use_benefits_before_meals">Before meals</string>
    <string name="breathwork_use_benefits_before_bedtime">Before bedtime</string>
    <string name="breathwork_use_benefits_on_flight">On a flight</string>
    <string name="breathwork_use_benefits_before_exercise">Before exercise</string>
    <string name="breathwork_use_benefits_before_work">Before work</string>
    <string name="breathwork_use_benefits_morning">Morning</string>
    <string name="breathwork_use_benefits_low_energy">Low energy</string>
    <string name="breathwork_use_benefits_waking_up">Waking up</string>
    <string name="breathwork_use_benefits_cold_exposure">Cold exposure</string>
    <string name="breathwork_use_benefits_anytime">Anytime</string>
    <string name="breathwork_use_benefits_low_focus">Low focus</string>
    <string name="breathwork_use_benefits_before_game_race">Before game or race</string>
    <string name="app_menu_start_workout">Start Workout</string>
    <string name="app_menu_claim_offer">Claim Your Special Offer</string>
    <string name="app_menu_open_cookbook">Open Cookbook</string>
    <string name="app_menu_report_issue">Report Issue</string>
    <string name="app_menu_check_progress">Check Your Progress</string>
    <string name="breathwork_restful_dreams_long_description">This sleep-inducing breathing exercise helps you relax and drift into restorative sleep full of peaceful dreams by holding your breath on the inhale and lengthening the exhale.
Lie on your back, relax your full body, and place one hand on your chest and the other on your belly.
Holding the breath on the inhale and extending the exhale boosts vagal tone, quieting your body\'s stress response and activating the soothing parasympathetic nervous system. This promotes a lasting state of calm and relaxation throughout the night.</string>
    <string name="breathwork_total_recovery_long_description">This exercise helps relieve pain in your body while improving blood oxygen levels and circulation. It is effective for recovery from exercise, headaches, hangovers, muscle aches, and more.
Take slow breaths into your lower abdomen, allowing your abdomen to expand on the inhale and contract on the exhale. Keep your chest and shoulders as still as possible while breathing.
Deep breathing with intention calms and regulates the autonomic nervous system (ANS). Holding your breath slowly increases CO2 levels in the blood, which enhances the calming effect of the vagus nerve when you exhale and activates your parasympathetic system. This promotes relaxation of the mind and alleviates pain in the body. Increased CO2 levels also assist in the release of oxygen within your cells, aiding in recovery.</string>
    <string name="breathwork_congrats_screen_title">Breathing finished!</string>
    <string name="breathwork_flow_long_description">This breathing exercise focuses on alternating nostril breathing to enhance concentration, awareness, and lung function. It\'s particularly beneficial when you need to sustain your focus for extended periods.
Use your index finger or thumb to fully close either your left or right nostril. Switch nostrils with each exhale, alternating the one you inhale from.
This exercise activates your parasympathetic nervous system, which reduces stress and blood pressure while boosting awareness and respiratory endurance. It also helps harmonize oxygen levels in each nasal cavity, promoting greater clarity of mind.</string>
    <string name="breathwork_calm_long_description">This exercise is specifically crafted to alleviate stress, bring tranquility to the mind, and lower heart rate and blood pressure.
Find a comfortable position, whether sitting or lying down, with proper back support and a fairly straight spine. Focus on breathing with the diaphragm, expanding the base of your ribs and belly during inhalation, and contracting them back in during exhalation.
Engaging in slow and controlled diaphragmatic breathing, particularly with a longer exhale, activates the body\'s innate relaxation response. This promotes a sense of calmness and relaxation in both the mind and body.</string>
    <string name="profile_title_feedback">We Love Feedback!</string>
    <string name="title_rate_the_app">Rate the App</string>
    <string name="sign_in_with_email_title">Log in to your account.</string>
    <string name="onboarding_gender_title">What\'s your gender?</string>
    <string name="onboarding_knee_pain_dialog_message">We will restrict exercises that are hard on your knees. You can reset the limitation later.\n\nAlthough, you should still follow your doctor\'s advice.</string>
    <string name="onboarding_knee_pain_dialog_title">We\'ve got you covered!</string>
    <string name="reminders_settings_title">Reminders</string>
    <string name="welcome_have_account_question">Already have an account?</string>
    <string name="feedback_send_feedback">Send Feedback</string>
    <string name="welcome_title_welcome_to_fitify">Welcome to Fitify.</string>
    <string name="onboarding_first_name_title">What’s your name?</string>
    <string name="onboarding_first_name">First name</string>
    <string name="btn_continue">Continue</string>
    <string name="title_sound">Sound</string>
    <string name="email_login_forgot_btn_sign_in">Log In</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_exercise_packs">Exercise Packs</string>
    <string name="title_integrations">Integrations</string>
    <string name="onboarding_gender_female">Female</string>
    <string name="onboarding_gender_male">Male</string>
</resources>