<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.example.fitifyandroid.presentation.screens.settings.views.SettingItemView
                app:title="@string/title_edit_profile"
                app:image="@drawable/edit_icon"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

            <com.example.fitifyandroid.presentation.screens.settings.views.SettingItemView
                app:title="@string/title_exercise_packs"
                app:image="@drawable/exercise_pack"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

            <com.example.fitifyandroid.presentation.screens.settings.views.SettingItemView
                app:title="@string/reminders_settings_title"
                app:image="@drawable/bell_icon"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

            <com.example.fitifyandroid.presentation.screens.settings.views.SettingItemView
                app:title="@string/title_sound"
                app:image="@drawable/sound_icon"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

            <com.example.fitifyandroid.presentation.screens.settings.views.SettingItemView
                app:title="@string/title_integrations"
                app:image="@drawable/apple_watch"
                app:showSeparator="false"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>