<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="@color/blue_dark"
        app:cardElevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@null"
                android:src="@drawable/img_knee_pain"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/essential_white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/onboarding_knee_pain_dialog_title"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="30dp"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="@color/blue_light_3"
                android:text="@string/onboarding_knee_pain_dialog_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.example.fitifyandroid.presentation.components.bottomAccentGradientButton.BottomAccentGradientButton
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:id="@+id/continueButton"
                app:title="@string/btn_continue"
                android:layout_height="48dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</FrameLayout>