<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.loginWithEmail.LoginWithEmailFragment">

    <com.example.learnandroid.presentation.components.appToolBar.AppToolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="44dp"/>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/loginButtonContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:maxLines="1"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/essential_white"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/sign_in_with_email_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.learnandroid.presentation.components.roundedFloatingTextField.RoundedFloatingTextField
                android:layout_marginTop="40dp"
                android:id="@+id/emailTextField"
                android:layout_width="match_parent"
                app:placeholder="@string/hint_email"
                android:layout_height="wrap_content"/>

            <com.example.learnandroid.presentation.components.roundedFloatingTextField.RoundedFloatingTextField
                android:layout_marginTop="20dp"
                android:id="@+id/passwordTextField"
                app:placeholder="@string/hint_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginButtonContainer"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.learnandroid.presentation.components.bottomWhiteButton.BottomWhiteButton
            android:id="@+id/loginButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:title="@string/email_login_forgot_btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>